@@ -1212,7 +1212,33 @@ function getImVersion() {
     global $gallery;
     $version = array();
 
-    exec($gallery->app->ImPath .'/convert -version', $results);
+    fs_exec($gallery->app->ImPath .'/convert -version', $results, $status);
+
+    $pieces = explode(' ', $results[0]);
+    $version = $pieces[2];
+
+    return $version;
+}
+
+/**
+ * Return the version number of jhead, identified by "jhead -v"
+ * @return $version	string	Versionnumber as string
+*/
+function getJheadVersion($dir = '') {
+    global $gallery;
+    
+	$bin = fs_executable('jhead');
+
+    if(empty($dir)) {
+		$dir = locateDir($bin, isset($gallery->app->use_exif) ? dirname($gallery->app->use_exif) : "");
+		if(empty($dir)) {
+			return 0;
+		}
+	}
+
+	$path ="$dir/$bin";
+
+    fs_exec($path . ' -V', $results, $status);
 
     $pieces = explode(' ', $results[0]);
     $version = $pieces[2];
